# ocaml-ortools

./: CHANGES.md  Makefile  NOTES.md  README.md  dune  dune-project  gen_libortools.ml  gen_libortools_inc.ml  index.html  ortools.opam  ortools_solvers.opam
doc/: dune  main_index.mld  ortools-config.sexp
libortools/: CMakeLists.txt
ortools/: db.js  dune  index.html  sat.ml  sat.mli
ortools/Ortools/: index.html
ortools/Ortools/Cp_model/: index.html
ortools/Ortools/Sat/: index.html
ortools/Ortools/Sat/Constraint/: index.html
ortools/Ortools/Sat/Constraint/Linear/: index.html
ortools/Ortools/Sat/Constraint/WithArray/: index.html
ortools/Ortools/Sat/Domain/: index.html
ortools/Ortools/Sat/LinearExpr/: index.html
ortools/Ortools/Sat/LinearExpr/L/: index.html
ortools/Ortools/Sat/Parameters/: index.html
ortools/Ortools/Sat/Response/: index.html
ortools/Ortools/Sat/Var/: index.html
ortools/Ortools/Sat_parameters/: index.html
ortools/doc/: dune  index.mld
ortools_solvers/: db.js  dune  index.html  ocaml_ortools_solvers.c  ocaml_ortools_solvers.cxx  ortools_solvers.ml  ortools_solvers.mli
ortools_solvers/Ortools_solvers/: index.html
ortools_solvers/Ortools_solvers/Sat/: index.html
ortools_solvers/discover/: discover.ml  dune
ortools_solvers/download/: download.ml  dune
ortools_solvers/libortools/: CMakeLists.txt  MODULE.bazel  Version.txt
ortools_solvers/libortools/cmake/: host.CMakeLists.txt
ortools_solvers/libortools/cmake/dependencies/: CMakeLists.txt
ortools_solvers/libortools/eigen/: CMakeLists.txt
ortools_solvers/stubs/: dune
samples/sat/: binpacking_problem_sat.ml  channeling_sample_sat.ml  cp_is_fun_sat.ml  cp_sat_example.ml  dune
utils/: abseil-cpp.patch  or-tools.patch  sat_solve_pb.c  updating.md
