(data_only_dirs libortools)

(executable
  (name gen_libortools)
  (modules gen_libortools)
  (libraries sexplib0 csexp))

; CMAKE_BUILD_PARALLEL_LEVEL=$(expr $(nproc) - 1)
; CMAKE_BUILD_PARALLEL_LEVEL=$(expr $(sysctl -n hw.logicalcpu) - 1)

; macosx + use depext: abseil re2 protobuf protobuf-c
(subdir libortools-build
  (rule
    (enabled_if (= %{ocaml-config:system} macosx))
    (deps (source_tree ../libortools))
    (targets (dir build))
    (action (progn
      (run cmake
             -DCMAKE_CXX_STANDARD=17
             -DBUILD_absl=OFF
             -DBUILD_Protobuf=OFF
             -DBUILD_re2=OFF
             -DBUILD_SAMPLES=OFF
             -DBUILD_EXAMPLES=OFF
             -DBUILD_FLATZINC=OFF
             -DBUILD_TESTING=OFF
             -DBUILD_MATH_OPT=ON
             -DUSE_COINOR=OFF
             -DUSE_CPLEX=OFF
             -DUSE_GLPK=OFF
             -DUSE_HIGHS=OFF
             -DUSE_PDLP=OFF
             -DUSE_SCIP=OFF
             -DUSE_XPRESS=OFF
             -DUSE_GLOP=ON
             -DUSE_GUROBI=ON
             -S ../libortools
             -B ./build)
      (run cmake --build ./build --config Release -j 16)
      (with-stdout-to libortools.inc
         (pipe-stdout
            (echo "libortools.9.15.so\nlibortools.9.so\nlibortools.so\n")
            (run ../gen_libortools.exe -copy)))
      (with-stdout-to libortools_files.sexp
         (echo "(libortools.9.15.so libortools.9.so libortools.so)"))
    ))
  )
)

; linux + build and install: abseil re2 protobuf protobuf-c
(subdir libortools-build
  (rule
    (enabled_if (<> %{ocaml-config:system} macosx))
    (deps (source_tree ../libortools))
    (targets (dir build))
    (action (progn
      (run cmake
             -DCMAKE_CXX_STANDARD=20
             -DBUILD_absl=ON
             -DBUILD_Protobuf=ON
             -DBUILD_re2=ON
             -DBUILD_SAMPLES=OFF
             -DBUILD_EXAMPLES=OFF
             -DBUILD_FLATZINC=OFF
             -DBUILD_TESTING=OFF
             -DBUILD_MATH_OPT=ON
             -DUSE_COINOR=OFF
             -DUSE_CPLEX=OFF
             -DUSE_GLPK=OFF
             -DUSE_HIGHS=OFF
             -DUSE_PDLP=OFF
             -DUSE_SCIP=OFF
             -DUSE_XPRESS=OFF
             -DUSE_GLOP=ON
             -DUSE_GUROBI=ON
             -S ../libortools
             -B ./build)
      (run cmake --build ./build --config Release -j 16)
      (with-stdout-to libortools.inc
         (run ../gen_libortools.exe -copy build/lib/libortools.sexp))
      (with-stdout-to libortools_files.sexp
         (run ../gen_libortools.exe build/lib/libortools.sexp))
    ))
  )
)
