opam-version: "2.0"

name: "ortools_solvers"
version: "9.15"

synopsis:
"Call Google OR-Tools solvers"

description: """
Google OR-Tools is an open source software suite for optimization, tuned
for tackling the world's toughest problems in vehicle routing, flows,
integer and linear programming, and constraint programming. This package
provides OCaml wrappers for calling the OR-Tools solvers. It currently only
supports the CP-SAT solver. Pull requests for other solvers are welcome."""

maintainer:  ["Timothy Bourke <tim@tbrk.org>"]
authors:     ["Timothy Bourke <tim@tbrk.org>"]
license:     "Apache-2.0"
homepage:    "https://github.com/inria/ocaml-ortools"
bug-reports: "https://github.com/inria/ocaml-ortools/issues"
dev-repo:    "git+https://github.com/inria/ocaml-ortools.git"
x-maintenance-intent: ["(latest)"]

depends: [
  "ocaml"      {>= "4.14.2"}
  "dune"       {>= "3.21"}
  "ortools"    {>= "9.15"}
  "conf-cmake" {build}
  "sexplib0"   {build}
  "csexp"      {build}
  "odoc"       {with-doc}
]

build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

depexts: [
## solid

  #zlib 1.3.1
  ["zlib"]	    {os = "macos" & os-distribution = "homebrew"}
  ["libz-dev"]	    {os-distribution = "debian"}	    

  # 1.0.8
  ["bzip2"]	    {os = "macos" & os-distribution = "homebrew"}
  ["libbz2-dev"]    {os-distribution = "debian"}	    

  # 3.4.1
  ["eigen@3"]	    {os = "macos" & os-distribution = "homebrew"}
  ["libeigen3-dev"] {os-distribution = "debian"}	    

## brittle
## debian: build with OCaml ortools_solvers package)

  # abseil 20260107.0
  ["abseil"]	    {os = "macos" & os-distribution = "homebrew"}

  # protobuf 33.4
  ["protobuf"]	    {os = "macos" & os-distribution = "homebrew"}

  # protobuf-c 1.5.2
  ["protobuf-c"]    {os = "macos" & os-distribution = "homebrew"}

  # re2 2025-11-05
  ["re2"]	    {os = "macos" & os-distribution = "homebrew"}

]

x-ci-accept-failures: [
  "alpine-3.22"
  "archlinux"
  "centos-10"
  "centos-9"
# "debian-12"
# "debian-13"
# "debian-testing"
# "debian-unstable"
  "fedora-42"
  "fedora-43"
  "freebsd-14.3"
# "macos-homebrew"
  "opensuse-15.6"
  "opensuse-16.0"
  "opensuse-tumbleweed"
  "ubuntu-22.04"
  "ubuntu-24.04"
  "ubuntu-25.04"
  "ubuntu-25.10"
  "cygwin"
  "msys2"
]

post-messages: [
  """Failed to install ortools_solvers.
Ensure the required dependencies are properly installed.
See https://github.com/inria/ocaml-ortools.
"""
  {failure}
]

