(data_only_dirs libortools)

(dynamic_include ../libortools-build/libortools.inc)

(library
  (name ortools_solvers)
  (public_name ortools_solvers)
  (synopsis "Call Google OR-Tools solvers")
  (modules ortools_solvers)
  (foreign_stubs
    (language c)
    (names ocaml_ortools_solvers))
  (libraries ortools)
  (library_flags -ccopt "-L$CAMLORIGIN"
                 -ccopt "-Wl,-rpath,$CAMLORIGIN"
                 ; nasty hack to ensure that libortools.so is copied to this
                 ; directory by the rule in libortools.inc.
                 -ccopt -DDUNE_DEP=%{dep:libortools.so})
  (c_library_flags -lortools -Lortools_solvers)
)

