(dynamic_include ../libortools-build/libortools.inc)

(library
  (name ortools_solvers)
  (public_name ortools_solvers)
  (synopsis "Call Google OR-Tools solvers")
  (modules ortools_solvers)
  (foreign_stubs
    (language c)
    (names ocaml_ortools_solvers)
    (flags :standard
           -I../libjerry
           ; hack to ensure that libjerry.so is copied to this
           ; directory by the rule in libortools.inc <sigh>
           -DDUNE_DEP=%{dep:libortools.so}))
  (libraries ortools)
  (library_flags :standard
                 -ccopt "-L$CAMLORIGIN"
                 -ccopt "-Wl,-rpath,$CAMLORIGIN")
  (c_library_flags :standard
                   -lortools -Lortools_solvers
                   -Wl,-rpath,../lib)
)

(install
   (files (include ../libortools-build/libortools_files.sexp))
   (section lib)
   (package ortools_solvers)
)
