(dynamic_include ../libortools-build/libortools.inc)

(library
  (name ortools_solvers)
  (public_name ortools_solvers)
  (synopsis "Call Google OR-Tools solvers")
  (modules ortools_solvers)
  (foreign_stubs
    (language cxx)
    (names ocaml_ortools_solvers)
    (flags :standard
           -std=c++20
           -I../libortools
           -I../libortools-build/build
           -I../libortools/protobuf/src
           -I../libortools/protobuf/third_party/utf8_range
           -DOR_PROTO_DLL=
           ; hack to ensure that libortools.so is copied to this
           ; directory by the rule in libortools.inc <sigh>
           -DDUNE_DEP=%{dep:libortools.so}))
  (libraries ortools threads)
  (library_flags :standard
                 -ccopt "-L$CAMLORIGIN"
                 -ccopt "-Wl,-rpath,$CAMLORIGIN")
  (c_library_flags :standard
                   -lortools -Lortools_solvers
                   -labsl_log_internal_message
                   -labsl_raw_logging_internal
                   -labsl_raw_hash_set
                   -lprotobuf
                   "-Wl,-rpath,'$ORIGIN/../ortools_solvers/'"
                   -Wl,-rpath,@loader_path/../ortools_solvers/)
)

(install
   (files (include ../libortools-build/libortools_files.sexp))
   (section libexec)
   (package ortools_solvers)
)
